# presentation-ComfyUI

./: .gitignore  README.md  WebBuilder.py  WebClient.py  WebServer.py  __init__.py  eslint.config.mjs  package.json  pyproject.toml
js/: PresentationDetachInputs.js  PresentationDropDown.js  PresentationSettings.js  presentation.js
nodes/: PresentationAddQueue.py  PresentationAdvancedSection.py  PresentationAudio.py  PresentationComponent.py  PresentationDropDown.py  PresentationFile.py  PresentationHistory.py  PresentationImage.py  PresentationProgress.py  PresentationSeed.py  PresentationTab.py  PresentationVideo.py
presentation-site/: .editorconfig  app.vue  env.example.txt  eslint.config.mjs  netlify.toml  nuxt.config.ts  package.json
presentation-site/assets/css/: Style.css  Style.mobile.css
presentation-site/components/: MainPage.vue  PresentationHistory.vue  PresentationHistoryToolbar.vue  PresentationLogin.vue  PresentationProgressAllTabs.vue  PresentationShare.vue  PresentationTab.vue  Tablist.vue  UserHistory.vue  YesNoDialog.vue
presentation-site/hooks/: hooks.js
presentation-site/pages/: UserHistory.vue  index.vue  stripe.vue
presentation-site/utils/: .updateUserInfo.js.swp  AddToQueue.js  HistoryDB.js  PresentationAudio.js  PresentationImage.js  PresentationInputs.js  PresentationMediaRecorder.js  PresentationURL.js  PresentationVideo.js  blankSVG.js  dispatchEvents.js  dispatchLoadFiles.js  getCurrentTab.js  getIsoDateFileName.js  getTabInfo.js  getViewURL.js  resetLazyLoad.js  toast.js  updateUserInfo.js  uploadFile.js
(+60 files in other folders)
